--- a/index.html
+++ b/index.html
@@ -8,10 +8,29 @@
 </head>
 <body>
     <h1>porsche </h1>
-    <p>A melhor marca automotiva
+    <p>A melhor marca automotiva , criada em  25 de abril de 1931 por Ferdinand Porsche na cidade de Stuttgart na alemanha , logo abaixo esta alguns modelos da marca
     </p>
     <img src="PORSCHE 911 CARRERA 2 BY DP MOTORSPORT 1990 001.jpg" alt="um carro">
+    <P>utilizando o motor Porsche Boxer de 175 cv, e 6 cilindros, com injeção multiponto, era robusto e muito confiável, com aceleração de 0 a 100 em 7 segundos esse é
+        o porsche 911 1974.</P>
     <img src="download.jpeg" alt="carro">
-     <img src="blobid0.webp" alt="carro">
+    <p>  essa é a porsche 911 turbo s
+    </p>
+    <L>motor 3.8 biturbo boxer de 6 cilindros de 650 cavalos
+    </L>
+    <L>Velocidade máxima é de 330 km/h</L>
+    <L>0 a 100 km/h em apenas 2,7 segundos</L>
+
+     <img src= "blobid0.webp"carro">
+     <h2>caracteri</h2>
+     <ul>
+        <li>motor gera 525 cv de potência e 47,9 kgfm de torque</li>
+        <li>A aceleração de 0 a 100 km/h é feita em 3,2 segundos</li>
+        <li>velocidade máxima é de 296 km/h</li>
+     </ul>
+     <p></p> essa é a porsche 
+        911 gt3 rs
+     </p>
+     <h2>1 ano A</h2>
 </body>
 </html>
