--- a/index.html
+++ b/index.html
@@ -7,22 +7,32 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>porsche </h1>
+    <header class="cabecalho">
+        <img src="logo-porsche-4096.png" alt="" class="logo porsche "
+        
+    <h1></h1>
     <p>A melhor marca automotiva , criada em  25 de abril de 1931 por Ferdinand Porsche na cidade de Stuttgart na alemanha , logo abaixo esta alguns modelos da marca
     </p>
     <img src="PORSCHE 911 CARRERA 2 BY DP MOTORSPORT 1990 001.jpg" alt="um carro">
-    <P>utilizando o motor Porsche Boxer de 175 cv, e 6 cilindros, com injeção multiponto, era robusto e muito confiável, com aceleração de 0 a 100 em 7 segundos esse é
-        o porsche 911 1974.</P>
+    <h2>caracteristicas</h2>
+        <ul>
+            <li>utilizando o motor Porsche Boxer de 175 cv, e 6 cilindros</li>
+            <li> com injeção multiponto, era robusto e muito confiável</li>
+            <li> com aceleração de 0 a 100 em 7 segundos esse é
+                o porsche 911 1974.</li>
+                <ul>
     <img src="download.jpeg" alt="carro">
-    <p>  essa é a porsche 911 turbo s
+    <p>  
     </p>
-    <L>motor 3.8 biturbo boxer de 6 cilindros de 650 cavalos
-    </L>
-    <L>Velocidade máxima é de 330 km/h</L>
-    <L>0 a 100 km/h em apenas 2,7 segundos</L>
-
+    <h2>caracteristicas</h2>
+    <ul>
+        <li>motor 3.8 biturbo boxer de 6 cilindros de 650 cavalos</li>
+        <li>Velocidade máxima é de 330 km/h</li>
+        <li>0 a 100 km/h em apenas 2,7 segundos</li>
+        <li>essa é a porsche 911 turbo s</li>
+    </ul>
      <img src= "blobid0.webp"carro">
-     <h2>caracteri</h2>
+     <h2>caracteristicas</h2>
      <ul>
         <li>motor gera 525 cv de potência e 47,9 kgfm de torque</li>
         <li>A aceleração de 0 a 100 km/h é feita em 3,2 segundos</li>
