--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img src="logo-porsche-4096.png" alt="" class="logo porsche "
-        
+        <img class="logo-porsche-4096.png"  src="logo porsche "alt="">
+        <ul class="litacabcalho">
+            <li class="itemlistacabecalho">home</li>
+             <li>class= "itemlistacabecalho">porche </li>
+             <li>class= "itemlistacabecalho> modelos</li>
+        </ul>
+        <header>
     <h1></h1>
     <p>A melhor marca automotiva , criada em  25 de abril de 1931 por Ferdinand Porsche na cidade de Stuttgart na alemanha , logo abaixo esta alguns modelos da marca
     </p>
