--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img class="logo-porsche-4096.png"  src="logo porsche "alt="">
-        <ul class="litacabcalho">
-            <li class="itemlistacabecalho">home</li>
-             <li>class= "itemlistacabecalho">porche </li>
-             <li>class= "itemlistacabecalho> modelos</li>
-        </ul>
-        <header>
-    <h1></h1>
+        <img class="logo-porsche"  src="logo-porsche-4096.png"alt="">
+        <ul class="lista_cabecalho">
+            <li class="item_lista_cabecalho">home</li>
+             <li class= "item_lista_cabecalho">porsche </li>
+             <li class= "item_lista_cabecalho">modelos mais famosos </li>
+        </ul> 
+    </header>
     <p>A melhor marca automotiva , criada em  25 de abril de 1931 por Ferdinand Porsche na cidade de Stuttgart na alemanha , logo abaixo esta alguns modelos da marca
     </p>
     <img src="PORSCHE 911 CARRERA 2 BY DP MOTORSPORT 1990 001.jpg" alt="um carro">
@@ -46,6 +45,6 @@
      <p></p> essa é a porsche 
         911 gt3 rs
      </p>
-     <h2>1 ano A</h2>
+     <h2>1 ano b</h2>
 </body>
 </html>
